# RobotArmSimulator

./: .gitignore  LICENSE  README.md  RobotArmSimulator.code-workspace  pyproject.toml
script/: 00_setup_venv.cmd  01_install.cmd  02_create_exe.cmd  10_run_sample.cmd  README.md
src/robot_arm_simulator/: __main__.py  config.py  inverse_kinematics.py  robot_plot.py
